# diagnosis-tool

./: MANIFEST.in  README.MD  evaluate.py  license.txt  measures.py  requirements.txt  selection.py  setup.cfg  setup.py  test_CS_model_container.py  test_evaluate.py  test_evaluate_cm.py
.github/workflows/: python-publish.yml  workflow.yml
veritastool/: ErrorCatcher.py  __init__.py  model_container.py  utility.py
veritastool/config/: config.ini  constants.py
veritastool/custom/: CMmodelwrapper.py  LRwrapper.py  __init__.py  modelwrapper.py  newmetric.py  newmetric_child.py  newmetric_child_perf.py
veritastool/examples/: BaseClassification_demo.ipynb  BaseRegression_demo.ipynb  CS_demo.ipynb  CS_demo_mlflow.ipynb  NewUseCaseCreation_demo.ipynb  PUW_demo.ipynb  nonPythonModel_customMetric_demo.ipynb
veritastool/examples/customer_marketing_example/: CM_demo.ipynb  response.py  uplift.py  util.py
veritastool/examples/data/: clv_dict.pickle  (+2 more)
veritastool/fairness/: __init__.py  credit_scoring.py  customer_marketing.py  fairness.py  fairness_metrics.py  modelrates.py  performance_metrics.py  tradeoff.py
veritastool/metrics/: __init__.py  fairness_metrics.py  modelrates.py  newmetric.py  performance_metrics.py  tradeoff.py
veritastool/model/: __init__.py  model_container.py  modelwrapper.py
veritastool/principles/: __init__.py  fairness.py  transparency.py
veritastool/usecases/: __init__.py  base_classification.py  base_regression.py  credit_scoring.py  customer_marketing.py  predictive_underwriting.py
veritastool/util/: errors.py  utility.py
(+25 files in other folders)
