[metadata]
description_file = README.MD
long_description = file: README.MD
long_description_content_type = text/markdown
project_urls =
    Documentation = https://htmlpreview.github.io/?https://github.com/mas-veritas/veritastool/blob/master/veritastool/resources/specs/API_Specs_final.htm
    Source Code = https://github.com/mas-veritas/veritastool
license = Apache 2.0
license_file = license.txt
