[metadata]
description = Veritas Diagnosis tool for fairness assessment.
description_file = README.MD
long_description = file: README.MD
long_description_content_type = text/markdown
project_urls =
    Documentation = https://htmlpreview.github.io/?https://github.com/mas-veritas2/veritastool/blob/main/veritastool/resources/specs/API_Specs_final.html
    Source Code = https://github.com/veritas-project/diagnosis-tool
license = Apache 2.0
license_file = license.txt
python_requires="3.8, 3.9, 3.10"
